# EldenRingChatBot

./: .gitignore  Logger.py  app.py  config.py  main.py  pyproject.toml  requirements.txt  test.ipynb
elden_ring_wiki/tools/: Html2TextLoader.py  rerank_retriever.py  wiki_splitter.py  wiki_vector_store.py
graphql_resources/: GraphQLClient.py  GraphQLQueryExecutor.py  GraphQLToolingDescription.py  __init__.py  my_schema.py
