[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "audioop-lts==0.2.2",
    "authlib==1.6.5",
    "babel==2.17.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beartype==0.22.8",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "brotli==1.2.0",
    "build==1.3.0",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "chromadb==1.3.5",
    "click==8.3.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "courlan==1.3.2",
    "cryptography==46.0.3",
    "cssselect==1.3.0",
    "cyclopts==4.3.0",
    "cython==3.2.2",
    "dataclasses-json==0.6.7",
    "dateparser==1.2.2",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.3",
    "dotenv==0.9.9",
    "durationpy==0.10",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fandom-py==0.2.1",
    "fastapi==0.123.0",
    "fastmcp==2.13.3",
    "ffmpy==1.0.0",
    "filelock==3.20.0",
    "flask==3.1.2",
    "flatbuffers==25.9.23",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "google-auth==2.43.0",
    "googleapis-common-protos==1.72.0",
    "gradio==6.0.1",
    "gradio-client==2.0.0",
    "graphql-core==3.2.7",
    "greenlet==3.2.4",
    "groovy==0.1.2",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "htmldate==1.9.4",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.1.7",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "justext==3.0.2",
    "kubernetes==34.1.0",
    "langchain==1.1.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.1.0",
    "langchain-ollama==1.0.0",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.10",
    "langsmith==0.4.49",
    "lomond==0.3.3",
    "lxml==6.0.2",
    "lxml-html-clean==0.4.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.2.1",
    "mcp==1.22.0",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.5",
    "oauthlib==3.3.1",
    "ollama==0.6.1",
    "onnxruntime==1.23.2",
    "openapi-pydantic==0.5.1",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-proto==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.5",
    "pathable==0.4.4",
    "pathvalidate==3.3.1",
    "pillow==12.0.0",
    "pip==25.3",
    "platformdirs==4.5.0",
    "playwright==1.57.0",
    "posthog==5.4.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.1",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "py-key-value-aio==0.3.0",
    "py-key-value-shared==0.3.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.2",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydub==0.25.1",
    "pyee==13.0.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pyperclip==1.11.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pywin32==311",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rapidfuzz==3.14.3",
    "readability-lxml==0.8.4.1",
    "referencing==0.36.2",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rich-rst==1.3.2",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "safehttpx==0.1.7",
    "semantic-version==2.10.0",
    "sgqlc==17.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "sse-starlette==3.0.3",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tld==0.13.1",
    "tokenizers==0.22.1",
    "tomlkit==0.13.3",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "trafilatura==2.0.0",
    "traitlets==5.14.3",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.3.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "werkzeug==3.1.4",
    "wget==3.2",
    "wheel==0.45.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
